--- a/index.html
+++ b/index.html
@@ -18,7 +18,53 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet">
-    <link href="styles.css" rel="stylesheet" />
+    <style>
+        html {
+  font-size: 1em;
+}
+
+body {
+  font-family: Roboto;
+  margin: 0;
+}
+
+main {
+  font-size: 1.05rem;
+  padding: 0 1em;
+  max-width: 768px;
+  text-align: justify;
+  background-color: white;
+  border-radius: 0.25em;
+  color: hsl(0deg 0% 15%);
+  font-weight: 400;
+  margin: 1.5em auto;
+  line-height: 1.5;
+}
+
+h1, h2, h3, h4, h5, h6 {
+        text-align: left;
+}
+
+h1 {
+  text-decoration: underline;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+  list-style-type: lower-alpha;
+}
+
+ul li {
+  margin-left: 1.5em;
+  padding-left: 1em;
+}
+
+ul li + li {
+  margin-top: 0.25em;
+}
+
+    </style>
   </head>
 
   <body>
