--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ ul li + li {
         <section>
           <h2>Privacy Policy</h2>
           <div>
-            Our Privacy Policy was last updated on <em>June 15, 2024</em>.
+            Our Privacy Policy was last updated on <em>July 29, 2024</em>.
             <p>
               This Privacy Policy describes our policies and procedures on the
               collection, use, and disclosure of the information when you use the
@@ -167,7 +167,7 @@ ul li + li {
         <section>
           <h2>Contact Us</h2>
           <p>If you have any questions about this Privacy Policy, You can
-            contact us by dropping a mail to <a href="mailto:chaudhary.vijay@hotmail.com?subject=Inquiry about ChildQuest: Play and Learn Privacy Policy 🕵️‍♂️">chaudhary.vijay@hotmail.com</a>.
+            contact us by dropping a mail to <a href="mailto:team.childquest@gmail.com?subject=Inquiry about ChildQuest: Play and Learn Privacy Policy 🕵️‍♂️">team.childquest@gmail.com</a>.
           </p>
         </section>
       </article>
