--- a/privacy.html
+++ b/privacy.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8" />
-    <title>ChildQuest Children’s Quiz</title>
+    <title>ChildQuest: Play and Learn</title>
 
     <base href="/" />
 
@@ -12,7 +12,7 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
     <meta name="description"
-      content="This is a ChildQuest (Children Quiz application) for age ranging 1-24 years old. Your child can learn and enjoy playing it.">
+      content="This is a ChildQuest: Play and Learn (Children Quiz application) for age ranging 1-24 years Your child can learn and enjoy playing it.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -70,13 +70,13 @@ ul li + li {
   <body>
     <main>
       <header>
-        <h1>ChildQuest: Children's Quiz's Privacy Policy</h1>
+        <h1>ChildQuest: Play and Learn Privacy Policy</h1>
       </header>
       <article>
         <section>
           <h2>Privacy Policy</h2>
           <div>
-            Our Privacy Policy was last updated on <em>June 15, 2024</em>.
+            Our Privacy Policy was last updated on <em>July 29, 2024</em>.
             <p>
               This Privacy Policy describes our policies and procedures on the
               collection, use, and disclosure of the information when you use the
@@ -105,7 +105,7 @@ ul li + li {
             <p>
               For this Privacy Policy:
               <ul>
-                <li><strong>Application</strong> means the software program provided by us, named ChildQuest - Children's Quiz,
+                <li><strong>Application</strong> means the software program provided by us, named ChildQuest: Play and Learn,
                   downloaded by you on any electronic device.</li>
                 <li><strong>We</strong>, <strong>Us,</strong> or <strong>Our</strong> in this agreement refers to the
                   original developer of the application.</li>
@@ -167,7 +167,7 @@ ul li + li {
         <section>
           <h2>Contact Us</h2>
           <p>If you have any questions about this Privacy Policy, You can
-            contact us by dropping a mail to <a href="mailto:chaudhary.vijay@hotmail.com?subject=Inquiry about ChildQuest's Privacy Policy 🕵️‍♂️">chaudhary.vijay@hotmail.com</a>.
+            contact us by dropping a mail to <a href="mailto:team.childquest@gmail.com?subject=Inquiry about ChildQuest: Play and Learn Privacy Policy 🕵️‍♂️">team.childquest@gmail.com</a>.
           </p>
         </section>
       </article>
